--- a/ovp_uploads/locale/pt_BR/LC_MESSAGES/django.po
+++ b/ovp_uploads/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-06-28 21:40+0000\n"
+"POT-Creation-Date: 2017-05-23 18:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,36 +20,36 @@ msgstr ""
 
 #: django-ovp-uploads/ovp_uploads/admin.py:38
 msgid "image gallery"
-msgstr ""
+msgstr "imagem da galeria"
 
 #: django-ovp-uploads/ovp_uploads/admin.py:39
 msgid "image galleries"
-msgstr ""
+msgstr "galeria de imagens"
 
 #: django-ovp-uploads/ovp_uploads/models.py:27
 msgid "Organization"
-msgstr ""
+msgstr "Organização"
 
 #: django-ovp-uploads/ovp_uploads/models.py:28
 msgid "Project"
-msgstr ""
+msgstr "Projeto"
 
 #: django-ovp-uploads/ovp_uploads/models.py:52
 msgid "uploaded image"
-msgstr ""
+msgstr "imagem enviada"
 
 #: django-ovp-uploads/ovp_uploads/models.py:53
 msgid "uploaded images"
-msgstr ""
+msgstr "imagens enviadas"
 
 #: django-ovp-uploads/ovp_uploads/models.py:56
 msgid "Image 350x260"
-msgstr ""
+msgstr "Imagem 350x260"
 
 #: django-ovp-uploads/ovp_uploads/models.py:64
 msgid "Category"
-msgstr ""
+msgstr "Categoria"
 
 #: django-ovp-uploads/ovp_uploads/models.py:65
 msgid "Name"
-msgstr ""
+msgstr "Nome"
