Add spanish messages

--- a/ovp/apps/core/locale/pt_BR/LC_MESSAGES/django.po
+++ b/ovp/apps/core/locale/pt_BR/LC_MESSAGES/django.po
@@ -175,4 +175,23 @@ msgstr "Proteção Animal"
 msgid "People with disabilities"
 msgstr "Pessoas com Deficiência"
 
+msgid "Politics"
+msgstr "Política"
 
+msgid "Children"
+msgstr "Crianças"
+
+msgid "Culture and Art"
+msgstr "Cultura e Arte"
+
+msgid "Refugees"
+msgstr "Refugiados"
+
+msgid "Citizenship"
+msgstr "Cidadania"
+
+msgid "Women"
+msgstr "Mulheres"
+
+msgid "Sustainability"
+msgstr "Sustentabilidade"
