--- a/ovp/apps/uploads/locale/pt_BR/LC_MESSAGES/django.po
+++ b/ovp/apps/uploads/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-05-23 18:49+0000\n"
+"POT-Creation-Date: 2019-10-01 14:16-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,38 +18,46 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: django-ovp-uploads/ovp_uploads/admin.py:38
-msgid "image gallery"
-msgstr "imagem da galeria"
-
-#: django-ovp-uploads/ovp_uploads/admin.py:39
-msgid "image galleries"
-msgstr "galeria de imagens"
-
-#: django-ovp-uploads/ovp_uploads/models.py:27
-msgid "Organization"
-msgstr "Organização"
-
-#: django-ovp-uploads/ovp_uploads/models.py:28
-msgid "Project"
-msgstr "Projeto"
-
-#: django-ovp-uploads/ovp_uploads/models.py:52
+#: models.py:54
 msgid "uploaded image"
 msgstr "imagem enviada"
 
-#: django-ovp-uploads/ovp_uploads/models.py:53
+#: models.py:55
 msgid "uploaded images"
 msgstr "imagens enviadas"
 
-#: django-ovp-uploads/ovp_uploads/models.py:56
+#: models.py:58
 msgid "Image 350x260"
 msgstr "Imagem 350x260"
 
-#: django-ovp-uploads/ovp_uploads/models.py:64
-msgid "Category"
-msgstr "Categoria"
+#: models.py:59
+msgid "Image small"
+msgstr "Imagem pequena"
 
-#: django-ovp-uploads/ovp_uploads/models.py:65
+#: models.py:60
+msgid "Image medium"
+msgstr "Imagem média"
+
+#: models.py:61
+msgid "Image large"
+msgstr "Imagem grande"
+
+#: models.py:67 models.py:108
 msgid "Name"
 msgstr "Nome"
+
+#: models.py:100
+msgid "uploaded document"
+msgstr "documento enviado"
+
+#: models.py:101
+msgid "uploaded documents"
+msgstr "documentos enviados"
+
+#: models.py:109
+msgid "Extension"
+msgstr "Extensão"
+
+#: models.py:110
+msgid "Size"
+msgstr "Tamanho"
