--- a/ovp/apps/admin/locale/es/LC_MESSAGES/django.po
+++ b/ovp/apps/admin/locale/es/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,331 +20,92 @@ msgstr ""
 
 #: jet/dashboard.py:20
 msgid "Quick links"
-msgstr ""
+msgstr "Enlaces rápidos"
 
 #: jet/dashboard.py:26
 msgid "Return to site"
-msgstr ""
+msgstr "Volver al sitio"
 
 #: jet/dashboard.py:27
 msgid "Change password"
-msgstr ""
+msgstr "Cambia la contraseña"
 
 #: jet/dashboard.py:29
 msgid "Log out"
-msgstr ""
+msgstr "Cerrar sesión"
 
 #: jet/dashboard.py:37
 msgid "Applications"
-msgstr ""
+msgstr "Aplicaciones"
 
 #: jet/dashboard.py:45
 msgid "Administration"
-msgstr ""
+msgstr "Administración"
 
 #: jet/dashboard.py:53
 msgid "Recent Actions"
-msgstr ""
+msgstr "Acciones recientes"
 
 #: jet/dashboard.py:61
 msgid "Indicators"
-msgstr ""
+msgstr "Indicadores"
 
 #: templates/admin/indicators.html:66
 msgid "Partial numbers"
-msgstr ""
+msgstr "Números parciales"
 
 #: templates/admin/indicators.html:66
 msgid "Total numbers"
-msgstr ""
+msgstr "Números totales"
 
 #: templates/admin/indicators.html:75
 msgid "Organizations registered"
-msgstr ""
+msgstr "Organizaciones registradas"
 
 #: templates/admin/indicators.html:79
 msgid "Organizations published"
-msgstr ""
+msgstr "Organizaciones publicadas"
 
 #: templates/admin/indicators.html:85
 msgid "Registered vacancies"
-msgstr ""
+msgstr "Vacantes registradas"
 
 #: templates/admin/indicators.html:89
 msgid "Published vacancies"
-msgstr ""
+msgstr "Vacantes publicadas"
 
 #: templates/admin/indicators.html:95
 msgid "User count"
-msgstr ""
+msgstr "Recuento de usuarios"
 
 #: templates/admin/indicators.html:99
 msgid "Applied volunteers"
-msgstr ""
+msgstr "Voluntarios aplicados"
 
 #: templates/admin/indicators.html:105
 msgid "Unique volunteers applied"
-msgstr ""
+msgstr "Voluntarios únicos aplicados"
 
 #: templates/admin/indicators.html:109
 msgid "Benefited people"
-msgstr ""
+msgstr "Personas beneficiadas"
 
 #: templates/admin/indicators.html:115
 msgid "Total vacancies"
-msgstr ""
+msgstr "Vacantes totales"
 
 #: templates/admin/textinput_filter.html:2
 #: templates/admin/textinput_filter.html:36
 #: templates/admin/textinput_filter.html:42
 #, python-format
 msgid " By %(filter_title)s "
-msgstr ""
+msgstr " Por %(filter_title)s "
 
 #: templates/admin/textinput_filter.html:50
 msgid "Search"
-msgstr ""
+msgstr "Buscar"
 
 #: templates/admin/textinput_filter.html:51
 msgid "Reset"
-msgstr ""
+msgstr "Reiniciar"
 
-#: core.Cause/name:1
-msgid "Treinamento Profissional"
-msgstr ""
-
-#: core.Cause/name:2
-msgid "Combate à Pobreza"
-msgstr ""
-
-#: core.Cause/name:3
-msgid "Consumo Consciente"
-msgstr ""
-
-#: core.Cause/name:4
-msgid "Cultura e Arte"
-msgstr ""
-
-#: core.Cause/name:5
-msgid "Direitos Humanos"
-msgstr ""
-
-#: core.Cause/name:6 core.Skill/name:5
-msgid "Educação"
-msgstr ""
-
-#: core.Cause/name:7
-msgid "Crianças"
-msgstr ""
-
-#: core.Cause/name:8
-msgid "Idosos"
-msgstr ""
-
-#: core.Cause/name:9
-msgid "Meio Ambiente"
-msgstr ""
-
-#: core.Cause/name:10
-msgid "Cidadania"
-msgstr ""
-
-#: core.Cause/name:11
-msgid "Proteção Animal"
-msgstr ""
-
-#: core.Cause/name:12 core.Skill/name:11
-msgid "Saúde"
-msgstr ""
-
-#: core.Cause/name:13
-msgid "Pessoas com Deficiência"
-msgstr ""
-
-#: core.Cause/name:27
-msgid "Política"
-msgstr ""
-
-#: core.Cause/name:32
-msgid "Jovens"
-msgstr ""
-
-#: core.Cause/name:33
-msgid "Mulheres"
-msgstr ""
-
-#: core.Cause/name:34 core.Skill/name:6
-msgid "Esportes"
-msgstr ""
-
-#: core.Cause/name:35
-msgid "Refugiados"
-msgstr ""
-
-#: core.Cause/name:36
-msgid "LGBTQ+"
-msgstr ""
-
-#: core.Cause/name:50
-msgid "Combate às alterações climáticas"
-msgstr ""
-
-#: core.Cause/name:51
-msgid "Consumo e produção responsáveis"
-msgstr ""
-
-#: core.Cause/name:52
-msgid "Redução das desigualdades"
-msgstr ""
-
-#: core.Cause/name:53
-msgid "Educação de qualidade"
-msgstr ""
-
-#: core.Cause/name:54
-msgid "Boa saúde e bem-estar"
-msgstr ""
-
-#: core.Cause/name:55
-msgid "Fome Zero"
-msgstr ""
-
-#: core.Cause/name:56
-msgid "Professional Training"
-msgstr ""
-
-#: core.Cause/name:57
-msgid "Fight Poverty"
-msgstr ""
-
-#: core.Cause/name:58
-msgid "Conscious consumption"
-msgstr ""
-
-#: core.Cause/name:59
-msgid "Culture, Sport and Art"
-msgstr ""
-
-#: core.Cause/name:60
-msgid "Human Rights"
-msgstr ""
-
-#: core.Cause/name:61 core.Skill/name:31
-msgid "Education"
-msgstr ""
-
-#: core.Cause/name:62
-msgid "Youth"
-msgstr ""
-
-#: core.Cause/name:63
-msgid "Elders"
-msgstr ""
-
-#: core.Cause/name:64
-msgid "Environment"
-msgstr ""
-
-#: core.Cause/name:65
-msgid "Citizen Participation"
-msgstr ""
-
-#: core.Cause/name:66
-msgid "Animal Protection"
-msgstr ""
-
-#: core.Cause/name:67 core.Skill/name:37
-msgid "Health"
-msgstr ""
-
-#: core.Cause/name:68
-msgid "People with disabilities"
-msgstr ""
-
-#: core.Cause/name:82
-msgid "Sustentabilidade"
-msgstr ""
-
-#: core.Skill/name:1
-msgid "Artes/Trabalho manual"
-msgstr ""
-
-#: core.Skill/name:2
-msgid "Comunicação"
-msgstr ""
-
-#: core.Skill/name:3
-msgid "Dança/Música"
-msgstr ""
-
-#: core.Skill/name:4
-msgid "Direito"
-msgstr ""
-
-#: core.Skill/name:7
-msgid "Cozinha"
-msgstr ""
-
-#: core.Skill/name:8
-msgid "Gerenciamento"
-msgstr ""
-
-#: core.Skill/name:9
-msgid "Idiomas"
-msgstr ""
-
-#: core.Skill/name:10
-msgid "Computadores/Tecnologia"
-msgstr ""
-
-#: core.Skill/name:12
-msgid "Outros"
-msgstr ""
-
-#: core.Skill/name:27
-msgid "Arts/Handcrafting"
-msgstr ""
-
-#: core.Skill/name:28
-msgid "Communication"
-msgstr ""
-
-#: core.Skill/name:29
-msgid "Dance/Music"
-msgstr ""
-
-#: core.Skill/name:30
-msgid "Law"
-msgstr ""
-
-#: core.Skill/name:32
-msgid "Sports"
-msgstr ""
-
-#: core.Skill/name:33
-msgid "Cooking"
-msgstr ""
-
-#: core.Skill/name:34
-msgid "Management"
-msgstr ""
-
-#: core.Skill/name:35
-msgid "Idioms"
-msgstr ""
-
-#: core.Skill/name:36
-msgid "Computers/Technology"
-msgstr ""
-
-#: core.Skill/name:38
-msgid "Others"
-msgstr ""
-
-#: core.Skill/name:39
-msgid "Organização"
-msgstr ""
-
-#: core.Skill/name:40
-msgid "Agilidade"
-msgstr ""
