--- a/ovp/apps/organizations/locale/es/LC_MESSAGES/django.po
+++ b/ovp/apps/organizations/locale/es/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,424 +20,193 @@ msgstr ""
 
 #: admin.py:279 admin.py:287 admin.py:295
 msgid "None"
-msgstr ""
+msgstr "Ninguno"
 
 #: admin.py:280
 msgid "Owner's Name"
-msgstr ""
+msgstr "Nombre del dueño"
 
 #: admin.py:288
 msgid "Owner's E-mail"
-msgstr ""
+msgstr "Correo electrónico del propietario"
 
 #: admin.py:296
 msgid "Owner's Phone"
-msgstr ""
+msgstr "Teléfono del propietario"
 
 #: apps.py:6
 msgid "Organizations"
-msgstr ""
+msgstr "Organizaciones"
 
 #: models/invite.py:12 models/invite.py:14
 msgid "Joined date"
-msgstr ""
+msgstr "Fecha de ingreso"
 
 #: models/invite.py:13 models/organization.py:62
 msgid "Modified date"
-msgstr ""
+msgstr "Fecha modificada"
 
 #: models/invite.py:18
 msgid "organization_invite"
-msgstr ""
+msgstr "organizacion_invite"
 
 #: models/organization.py:18
 msgid "Organization"
-msgstr ""
+msgstr "Organización"
 
 #: models/organization.py:19
 msgid "School"
-msgstr ""
+msgstr "Colegio"
 
 #: models/organization.py:20
 msgid "Company"
-msgstr ""
+msgstr "Empresa"
 
 #: models/organization.py:21
 msgid "Group of volunteers"
-msgstr ""
+msgstr "Grupo de voluntarios"
 
 #: models/organization.py:26
 msgid "owner"
-msgstr ""
+msgstr "propietario"
 
 #: models/organization.py:27
 msgid "address"
-msgstr ""
+msgstr "direcciones"
 
 #: models/organization.py:28
 msgid "image"
-msgstr ""
+msgstr "imagen"
 
 #: models/organization.py:29
 msgid "cover"
-msgstr ""
+msgstr "imagen de portada"
 
 #: models/organization.py:30
 msgid "causes"
-msgstr ""
+msgstr "causas"
 
 #: models/organization.py:31
 msgid "members"
-msgstr ""
+msgstr "miembros"
 
 #: models/organization.py:32
 msgid "galleries"
-msgstr ""
+msgstr "galerías"
 
 #: models/organization.py:33
 msgid "flairs"
-msgstr ""
+msgstr "instintos"
 
 #: models/organization.py:36
 msgid "categories"
-msgstr ""
+msgstr "categorías"
 
 #: models/organization.py:37
 msgid "Slug"
-msgstr ""
+msgstr "slug"
 
 #: models/organization.py:38
 msgid "Name"
-msgstr ""
+msgstr "Nombre"
 
 #: models/organization.py:39
 msgid "Website"
-msgstr ""
+msgstr "Sitio web"
 
 #: models/organization.py:40
 msgid "Facebook"
-msgstr ""
+msgstr "Facebook"
 
 #: models/organization.py:41
 msgid "Instagram"
-msgstr ""
+msgstr "Instagram"
 
 #: models/organization.py:42
 msgid "Type"
-msgstr ""
+msgstr "Tipo"
 
 #: models/organization.py:43
 msgid "Details"
-msgstr ""
+msgstr "Detalles"
 
 #: models/organization.py:44
 msgid "Short description"
-msgstr ""
+msgstr "Breve descripción"
 
 #: models/organization.py:45
 msgid "Hidden address"
-msgstr ""
+msgstr "Dirección oculta"
 
 #: models/organization.py:46
 msgid "Verified"
-msgstr ""
+msgstr "Verificado"
 
 #: models/organization.py:47
 msgid "CNPJ"
-msgstr ""
+msgstr "CNPJ"
 
 #: models/organization.py:51
 msgid "Responsible name"
-msgstr ""
+msgstr "Nombre del responsable"
 
 #: models/organization.py:52
 msgid "Responsible email"
-msgstr ""
+msgstr "Correo electrónico del responsable"
 
 #: models/organization.py:53
 msgid "Responsible phone"
-msgstr ""
+msgstr "Teléfono del responsable"
 
 #: models/organization.py:56
 msgid "Highlighted"
-msgstr ""
+msgstr "Resaltado"
 
 #: models/organization.py:57
 msgid "Published"
-msgstr ""
+msgstr "Publicado"
 
 #: models/organization.py:58
 msgid "Published date"
-msgstr ""
+msgstr "Fecha de Publicación"
 
 #: models/organization.py:59
 msgid "Deleted"
-msgstr ""
+msgstr "Eliminado"
 
 #: models/organization.py:60
 msgid "Deleted date"
-msgstr ""
+msgstr "Fecha eliminada"
 
 #: models/organization.py:61
 msgid "Created date"
-msgstr ""
+msgstr "Fecha de creación"
 
 #: models/organization.py:63
 msgid "Inactive"
-msgstr ""
+msgstr "Inactivo"
 
 #: models/organization.py:64
 msgid "Reminder"
-msgstr ""
+msgstr "Recordatorio"
 
 #: models/organization.py:65
 msgid "Reminder sent date"
-msgstr ""
+msgstr "Recordatorio de fecha de envío"
 
 #: models/organization.py:131
 msgid "organization"
-msgstr ""
+msgstr "organización"
 
 #: models/organization.py:132
 msgid "organizations"
-msgstr ""
+msgstr "organizaciones"
 
-#: core.Cause/name:1
-msgid "Treinamento Profissional"
-msgstr ""
+msgid "Volunteers"
+msgstr "Voluntarios"
 
-#: core.Cause/name:2
-msgid "Combate à Pobreza"
-msgstr ""
+msgid "Rating"
+msgstr "Clasificación"
 
-#: core.Cause/name:3
-msgid "Consumo Consciente"
-msgstr ""
-
-#: core.Cause/name:4
-msgid "Cultura e Arte"
-msgstr ""
-
-#: core.Cause/name:5
-msgid "Direitos Humanos"
-msgstr ""
-
-#: core.Cause/name:6 core.Skill/name:5
-msgid "Educação"
-msgstr ""
-
-#: core.Cause/name:7
-msgid "Crianças"
-msgstr ""
-
-#: core.Cause/name:8
-msgid "Idosos"
-msgstr ""
-
-#: core.Cause/name:9
-msgid "Meio Ambiente"
-msgstr ""
-
-#: core.Cause/name:10
-msgid "Cidadania"
-msgstr ""
-
-#: core.Cause/name:11
-msgid "Proteção Animal"
-msgstr ""
-
-#: core.Cause/name:12 core.Skill/name:11
-msgid "Saúde"
-msgstr ""
-
-#: core.Cause/name:13
-msgid "Pessoas com Deficiência"
-msgstr ""
-
-#: core.Cause/name:27
-msgid "Política"
-msgstr ""
-
-#: core.Cause/name:32
-msgid "Jovens"
-msgstr ""
-
-#: core.Cause/name:33
-msgid "Mulheres"
-msgstr ""
-
-#: core.Cause/name:34 core.Skill/name:6
-msgid "Esportes"
-msgstr ""
-
-#: core.Cause/name:35
-msgid "Refugiados"
-msgstr ""
-
-#: core.Cause/name:36
-msgid "LGBTQ+"
-msgstr ""
-
-#: core.Cause/name:50
-msgid "Combate às alterações climáticas"
-msgstr ""
-
-#: core.Cause/name:51
-msgid "Consumo e produção responsáveis"
-msgstr ""
-
-#: core.Cause/name:52
-msgid "Redução das desigualdades"
-msgstr ""
-
-#: core.Cause/name:53
-msgid "Educação de qualidade"
-msgstr ""
-
-#: core.Cause/name:54
-msgid "Boa saúde e bem-estar"
-msgstr ""
-
-#: core.Cause/name:55
-msgid "Fome Zero"
-msgstr ""
-
-#: core.Cause/name:56
-msgid "Professional Training"
-msgstr ""
-
-#: core.Cause/name:57
-msgid "Fight Poverty"
-msgstr ""
-
-#: core.Cause/name:58
-msgid "Conscious consumption"
-msgstr ""
-
-#: core.Cause/name:59
-msgid "Culture, Sport and Art"
-msgstr ""
-
-#: core.Cause/name:60
-msgid "Human Rights"
-msgstr ""
-
-#: core.Cause/name:61 core.Skill/name:31
-msgid "Education"
-msgstr ""
-
-#: core.Cause/name:62
-msgid "Youth"
-msgstr ""
-
-#: core.Cause/name:63
-msgid "Elders"
-msgstr ""
-
-#: core.Cause/name:64
-msgid "Environment"
-msgstr ""
-
-#: core.Cause/name:65
-msgid "Citizen Participation"
-msgstr ""
-
-#: core.Cause/name:66
-msgid "Animal Protection"
-msgstr ""
-
-#: core.Cause/name:67 core.Skill/name:37
-msgid "Health"
-msgstr ""
-
-#: core.Cause/name:68
-msgid "People with disabilities"
-msgstr ""
-
-#: core.Cause/name:82
-msgid "Sustentabilidade"
-msgstr ""
-
-#: core.Skill/name:1
-msgid "Artes/Trabalho manual"
-msgstr ""
-
-#: core.Skill/name:2
-msgid "Comunicação"
-msgstr ""
-
-#: core.Skill/name:3
-msgid "Dança/Música"
-msgstr ""
-
-#: core.Skill/name:4
-msgid "Direito"
-msgstr ""
-
-#: core.Skill/name:7
-msgid "Cozinha"
-msgstr ""
-
-#: core.Skill/name:8
-msgid "Gerenciamento"
-msgstr ""
-
-#: core.Skill/name:9
-msgid "Idiomas"
-msgstr ""
-
-#: core.Skill/name:10
-msgid "Computadores/Tecnologia"
-msgstr ""
-
-#: core.Skill/name:12
-msgid "Outros"
-msgstr ""
-
-#: core.Skill/name:27
-msgid "Arts/Handcrafting"
-msgstr ""
-
-#: core.Skill/name:28
-msgid "Communication"
-msgstr ""
-
-#: core.Skill/name:29
-msgid "Dance/Music"
-msgstr ""
-
-#: core.Skill/name:30
-msgid "Law"
-msgstr ""
-
-#: core.Skill/name:32
-msgid "Sports"
-msgstr ""
-
-#: core.Skill/name:33
-msgid "Cooking"
-msgstr ""
-
-#: core.Skill/name:34
-msgid "Management"
-msgstr ""
-
-#: core.Skill/name:35
-msgid "Idioms"
-msgstr ""
-
-#: core.Skill/name:36
-msgid "Computers/Technology"
-msgstr ""
-
-#: core.Skill/name:38
-msgid "Others"
-msgstr ""
-
-#: core.Skill/name:39
-msgid "Organização"
-msgstr ""
-
-#: core.Skill/name:40
-msgid "Agilidade"
-msgstr ""
+msgid "Benefited people"
+msgstr "Personas beneficiadas"
