--- a/ovp/apps/projects/locale/es/LC_MESSAGES/django.po
+++ b/ovp/apps/projects/locale/es/LC_MESSAGES/django.po
@@ -20,626 +20,383 @@ msgstr ""
 
 #: admin/apply.py:166
 msgid "Name"
-msgstr ""
+msgstr "Nombre"
 
 #: admin/apply.py:174
 msgid "E-mail"
-msgstr ""
+msgstr "Email"
 
 #: admin/apply.py:182
 msgid "Phone"
-msgstr ""
+msgstr "Teléfono"
 
 #: admin/apply.py:189 admin/apply.py:197 admin/apply.py:205
 #: admin/project.py:319
 msgid "None"
-msgstr ""
+msgstr "Ninguno"
 
 #: admin/apply.py:190 models/project.py:188
 msgid "Project"
-msgstr ""
+msgstr "Proyecto"
 
 #: admin/apply.py:198 admin/project.py:320
 msgid "Organization"
-msgstr ""
+msgstr "Organización"
 
 #: admin/apply.py:206
 msgid "Address"
-msgstr ""
+msgstr "Direcciones"
 
 #: admin/job.py:19 admin/job.py:20
 msgid "Job"
-msgstr ""
+msgstr "Trabajo"
 
 #: admin/jobdate.py:14
 msgid "Job Date"
-msgstr ""
+msgstr "Fecha de trabajo"
 
 #: admin/jobdate.py:15
 msgid "Job Dates"
-msgstr ""
+msgstr "Fechas de trabajo"
 
 #: admin/project.py:304
 msgid "Opportunities"
-msgstr ""
+msgstr "Oportunidades"
 
 #: admin/project.py:312
 msgid "Type not specified"
-msgstr ""
+msgstr "Tipo no especificado"
 
 #: admin/project.py:313
 msgid "Can be done remotely?"
-msgstr ""
+msgstr "¿Se puede hacer de forma remota?"
 
 #: admin/project.py:324 admin/project.py:329 admin/project.py:334
 msgid "Owner not assigned"
-msgstr ""
+msgstr "Propietario no asignado"
 
 #: admin/project.py:325
 msgid "Owner name"
-msgstr ""
+msgstr "Nombre del dueño"
 
 #: admin/project.py:330
 msgid "Owner email"
-msgstr ""
+msgstr "Email del dueño"
 
 #: admin/project.py:335
 msgid "Owner phone"
-msgstr ""
+msgstr "Teléfono del dueño"
 
 #: apps.py:6
 msgid "Projects"
-msgstr ""
+msgstr "Proyectos"
 
 #: models/apply.py:17
 msgid "user"
-msgstr ""
+msgstr "usuario"
 
 #: models/apply.py:18 models/project.py:176
 msgid "project"
-msgstr ""
+msgstr "proyecto"
 
 #: models/apply.py:19
 msgid "status"
-msgstr ""
+msgstr "estado"
 
 #: models/apply.py:20
 msgid "role"
-msgstr ""
+msgstr "papel"
 
 #: models/apply.py:21
 msgid "created date"
-msgstr ""
+msgstr "Fecha de creación"
 
 #: models/apply.py:22
 msgid "canceled date"
-msgstr ""
+msgstr "fecha cancelada"
 
 #: models/apply.py:24 models/category.py:9
 msgid "name"
-msgstr ""
+msgstr "nombre"
 
 #: models/apply.py:25
 msgid "email"
-msgstr ""
+msgstr "correo electrónico"
 
 #: models/apply.py:26
 msgid "phone"
-msgstr ""
+msgstr "teléfono"
 
 #: models/apply.py:27
 msgid "Documento"
-msgstr ""
+msgstr "Documento"
 
 #: models/apply.py:28
 msgid "message"
-msgstr ""
+msgstr "mensaje"
 
 #: models/apply.py:77
 msgid "apply"
-msgstr ""
+msgstr "aplicar"
 
 #: models/apply.py:78
 msgid "applies"
-msgstr ""
+msgstr "inscripciones"
 
 #: models/category.py:11
 msgid "description"
-msgstr ""
+msgstr "descripción"
 
 #: models/category.py:12 models/project.py:32
 msgid "image"
-msgstr ""
+msgstr "imagen"
 
 #: models/category.py:13 models/project.py:53
 msgid "Highlighted"
-msgstr ""
+msgstr "Resaltado"
 
 #: models/category.py:27
 msgid "category"
-msgstr ""
+msgstr "categoría"
 
 #: models/category.py:28 models/project.py:41
 msgid "categories"
-msgstr ""
+msgstr "categorías"
 
 #: models/job.py:7
 msgid "Label"
-msgstr ""
+msgstr "Etiqueta"
 
 #: models/job.py:8 models/job.py:31
 msgid "Start date"
-msgstr ""
+msgstr "Fecha de inicio"
 
 #: models/job.py:9 models/job.py:32
 msgid "End date"
-msgstr ""
+msgstr "Fecha final"
 
 #: models/job.py:10 models/job.py:59
 msgid "job"
-msgstr ""
+msgstr "trabajo"
 
 #: models/job.py:25
 msgid "job date"
-msgstr ""
+msgstr "fecha de trabajo"
 
 #: models/job.py:26
 msgid "job dates"
-msgstr ""
+msgstr "fechas de trabajo"
 
 #: models/job.py:33 models/work.py:10
 msgid "This job can be done remotely"
-msgstr ""
+msgstr "Este trabajo se puede hacer de forma remota."
 
 #: models/job.py:36
 msgid "Unbound Job"
-msgstr ""
+msgstr "Trabajo sin consolidar"
 
 #: models/job.py:60
 msgid "jobs"
-msgstr ""
+msgstr "trabajos"
 
 #: models/project.py:33
 msgid "address"
-msgstr ""
+msgstr "direcciones"
 
 #: models/project.py:34
 msgid "skills"
-msgstr ""
+msgstr "habilidades"
 
 #: models/project.py:35
 msgid "causes"
-msgstr ""
+msgstr "causas"
 
 #: models/project.py:36
 msgid "galleries"
-msgstr ""
+msgstr "galerías"
 
 #: models/project.py:37
 msgid "posts"
-msgstr ""
+msgstr "publicaciones"
 
 #: models/project.py:38
 msgid "documents"
-msgstr ""
+msgstr "documentos"
 
 #: models/project.py:42
 msgid "owner"
-msgstr ""
+msgstr "propietario"
 
 #: models/project.py:43
 msgid "organization"
-msgstr ""
+msgstr "organización"
 
 #: models/project.py:44
 msgid "item"
-msgstr ""
+msgstr "articulo"
 
 #: models/project.py:46
 msgid "flairs"
-msgstr ""
+msgstr "instintos"
 
 #: models/project.py:50
 msgid "Project name"
-msgstr ""
+msgstr "Nombre del proyecto"
 
 #: models/project.py:52
 msgid "Published"
-msgstr ""
+msgstr "Publicado"
 
 #: models/project.py:54 models/project.py:189
 msgid "Applied count"
-msgstr ""
+msgstr "Recuento aplicado"
 
 #: models/project.py:57
 msgid "Public"
-msgstr ""
+msgstr "Público"
 
 #: models/project.py:58
 msgid "Minimum Age"
-msgstr ""
+msgstr "Edad mínima"
 
 #: models/project.py:59
 msgid "Hidden address"
-msgstr ""
+msgstr "Dirección oculta"
 
 #: models/project.py:60
 msgid "Crowdfunding"
-msgstr ""
+msgstr "Financiamiento colectivo"
 
 #: models/project.py:61
 msgid "Skip address filter"
-msgstr ""
+msgstr "Saltar filtro de dirección"
 
 #: models/project.py:62
 msgid "Project Type"
-msgstr ""
+msgstr "Tipo de proyecto"
 
 #: models/project.py:65
 msgid "Partnership"
-msgstr ""
+msgstr "Camaradería"
 
 #: models/project.py:66
 msgid "Chat Enabled"
-msgstr ""
+msgstr "Chat habilitado"
 
 #: models/project.py:67
 msgid "Canceled"
-msgstr ""
+msgstr "Cancelado"
 
 #: models/project.py:68
 msgid "testimony"
-msgstr ""
+msgstr "testimonio"
 
 #: models/project.py:72
 msgid "Published date"
-msgstr ""
+msgstr "Fecha de Publicación"
 
 #: models/project.py:73
 msgid "Closed"
-msgstr ""
+msgstr "Cerrado"
 
 #: models/project.py:74
 msgid "Closed date"
-msgstr ""
+msgstr "Fecha de cierre"
 
 #: models/project.py:75
 msgid "Canceled date"
-msgstr ""
+msgstr "Fecha cancelada"
 
 #: models/project.py:76
 msgid "Deleted"
-msgstr ""
+msgstr "Eliminado"
 
 #: models/project.py:77
 msgid "Deleted date"
-msgstr ""
+msgstr "Fecha eliminada"
 
 #: models/project.py:78
 msgid "Created date"
-msgstr ""
+msgstr "Fecha de creación"
 
 #: models/project.py:79
 msgid "Modified date"
-msgstr ""
+msgstr "Fecha modificada"
 
 #: models/project.py:82 models/project.py:186
 msgid "Details"
-msgstr ""
+msgstr "Detalles"
 
 #: models/project.py:83
 msgid "Short description"
-msgstr ""
+msgstr "Breve descripción"
 
 #: models/project.py:177
 msgid "projects"
-msgstr ""
+msgstr "proyectos"
 
 #: models/project.py:184
 msgid "Role name"
-msgstr ""
+msgstr "Nombre de papel"
 
 #: models/project.py:185
 msgid "Prerequisites"
-msgstr ""
+msgstr "Prerrequisitos"
 
 #: models/project.py:187
 msgid "Vacancies"
-msgstr ""
+msgstr "Vacantes"
 
 #: models/project.py:194
 msgid "volunteer role"
-msgstr ""
+msgstr "papel del voluntario"
 
 #: models/project.py:195
 msgid "volunteer roles"
-msgstr ""
+msgstr "papeles de voluntarios"
 
 #: models/work.py:8
 msgid "Weekly hours"
-msgstr ""
+msgstr "Horas semanales"
 
 #: models/work.py:9
 msgid "Description"
-msgstr ""
+msgstr "Descripción"
 
 #: models/work.py:13
 #, python-format
 msgid "%d hours per week"
-msgstr ""
+msgstr "%d horas por semana"
 
 #: models/work.py:17
 msgid "work"
-msgstr ""
+msgstr "trabajo"
 
 #: models/work.py:18
 msgid "works"
-msgstr ""
+msgstr "trabajos"
 
 #: views/project.py:31
 msgid "User Name"
-msgstr ""
+msgstr "Nombre de usuario"
 
 #: views/project.py:31
 msgid "User Email"
-msgstr ""
+msgstr "Email del usuario"
 
 #: views/project.py:31
 msgid "User Phone"
-msgstr ""
+msgstr "Teléfono del usuario"
 
 #: views/project.py:31
 msgid "Applied At"
-msgstr ""
+msgstr "Aplicado a"
 
 #: views/project.py:31
 msgid "Role"
-msgstr ""
+msgstr "Papel"
 
 #: views/project.py:31
 msgid "Status"
-msgstr ""
+msgstr "Estado"
 
-#: views/project.py:100
-msgid "Applied Users"
-msgstr ""
-
-#: core.Cause/name:1
-msgid "Treinamento Profissional"
-msgstr ""
-
-#: core.Cause/name:2
-msgid "Combate à Pobreza"
-msgstr ""
-
-#: core.Cause/name:3
-msgid "Consumo Consciente"
-msgstr ""
-
-#: core.Cause/name:4
-msgid "Cultura e Arte"
-msgstr ""
-
-#: core.Cause/name:5
-msgid "Direitos Humanos"
-msgstr ""
-
-#: core.Cause/name:6 core.Skill/name:5
-msgid "Educação"
-msgstr ""
-
-#: core.Cause/name:7
-msgid "Crianças"
-msgstr ""
-
-#: core.Cause/name:8
-msgid "Idosos"
-msgstr ""
-
-#: core.Cause/name:9
-msgid "Meio Ambiente"
-msgstr ""
-
-#: core.Cause/name:10
-msgid "Cidadania"
-msgstr ""
-
-#: core.Cause/name:11
-msgid "Proteção Animal"
-msgstr ""
-
-#: core.Cause/name:12 core.Skill/name:11
-msgid "Saúde"
-msgstr ""
-
-#: core.Cause/name:13
-msgid "Pessoas com Deficiência"
-msgstr ""
-
-#: core.Cause/name:27
-msgid "Política"
-msgstr ""
-
-#: core.Cause/name:32
-msgid "Jovens"
-msgstr ""
-
-#: core.Cause/name:33
-msgid "Mulheres"
-msgstr ""
-
-#: core.Cause/name:34 core.Skill/name:6
-msgid "Esportes"
-msgstr ""
-
-#: core.Cause/name:35
-msgid "Refugiados"
-msgstr ""
-
-#: core.Cause/name:36
-msgid "LGBTQ+"
-msgstr ""
-
-#: core.Cause/name:50
-msgid "Combate às alterações climáticas"
-msgstr ""
-
-#: core.Cause/name:51
-msgid "Consumo e produção responsáveis"
-msgstr ""
-
-#: core.Cause/name:52
-msgid "Redução das desigualdades"
-msgstr ""
-
-#: core.Cause/name:53
-msgid "Educação de qualidade"
-msgstr ""
-
-#: core.Cause/name:54
-msgid "Boa saúde e bem-estar"
-msgstr ""
-
-#: core.Cause/name:55
-msgid "Fome Zero"
-msgstr ""
-
-#: core.Cause/name:56
-msgid "Professional Training"
-msgstr ""
-
-#: core.Cause/name:57
-msgid "Fight Poverty"
-msgstr ""
-
-#: core.Cause/name:58
-msgid "Conscious consumption"
-msgstr ""
-
-#: core.Cause/name:59
-msgid "Culture, Sport and Art"
-msgstr ""
-
-#: core.Cause/name:60
-msgid "Human Rights"
-msgstr ""
-
-#: core.Cause/name:61 core.Skill/name:31
-msgid "Education"
-msgstr ""
-
-#: core.Cause/name:62
-msgid "Youth"
-msgstr ""
-
-#: core.Cause/name:63
-msgid "Elders"
-msgstr ""
-
-#: core.Cause/name:64
-msgid "Environment"
-msgstr ""
-
-#: core.Cause/name:65
-msgid "Citizen Participation"
-msgstr ""
-
-#: core.Cause/name:66
-msgid "Animal Protection"
-msgstr ""
-
-#: core.Cause/name:67 core.Skill/name:37
-msgid "Health"
-msgstr ""
-
-#: core.Cause/name:68
-msgid "People with disabilities"
-msgstr ""
-
-#: core.Cause/name:82
-msgid "Sustentabilidade"
-msgstr ""
-
-#: core.Skill/name:1
-msgid "Artes/Trabalho manual"
-msgstr ""
-
-#: core.Skill/name:2
-msgid "Comunicação"
-msgstr ""
-
-#: core.Skill/name:3
-msgid "Dança/Música"
-msgstr ""
-
-#: core.Skill/name:4
-msgid "Direito"
-msgstr ""
-
-#: core.Skill/name:7
-msgid "Cozinha"
-msgstr ""
-
-#: core.Skill/name:8
-msgid "Gerenciamento"
-msgstr ""
-
-#: core.Skill/name:9
-msgid "Idiomas"
-msgstr ""
-
-#: core.Skill/name:10
-msgid "Computadores/Tecnologia"
-msgstr ""
-
-#: core.Skill/name:12
-msgid "Outros"
-msgstr ""
-
-#: core.Skill/name:27
-msgid "Arts/Handcrafting"
-msgstr ""
-
-#: core.Skill/name:28
-msgid "Communication"
-msgstr ""
-
-#: core.Skill/name:29
-msgid "Dance/Music"
-msgstr ""
-
-#: core.Skill/name:30
-msgid "Law"
-msgstr ""
-
-#: core.Skill/name:32
-msgid "Sports"
-msgstr ""
-
-#: core.Skill/name:33
-msgid "Cooking"
-msgstr ""
-
-#: core.Skill/name:34
-msgid "Management"
-msgstr ""
-
-#: core.Skill/name:35
-msgid "Idioms"
-msgstr ""
-
-#: core.Skill/name:36
-msgid "Computers/Technology"
-msgstr ""
-
-#: core.Skill/name:38
-msgid "Others"
-msgstr ""
-
-#: core.Skill/name:39
-msgid "Organização"
-msgstr ""
-
-#: core.Skill/name:40
-msgid "Agilidade"
-msgstr ""
