--- a/ovp/apps/core/locale/pt_BR/LC_MESSAGES/django.po
+++ b/ovp/apps/core/locale/pt_BR/LC_MESSAGES/django.po
@@ -429,7 +429,7 @@ msgstr "Cidadania"
 msgid "Women"
 msgstr "Mulheres"
 
-msgid "Susteinability"
+msgid "Sustainability"
 msgstr "Sustentabilidade"
 
 msgid "Culture and Art"
